# dnn_reco

./: .coveragerc  .gitignore  .pre-commit-config.yaml  LICENSE  README.md  pyproject.toml  setup.py
.github/workflows/: test_suite.yml
configs/: default_config.yaml
configs/biased_selection/: biased_muongun.yaml
configs/cgenerator_data/: cgenerator_data_2002.yaml
configs/cscd_l3/: cscd_l3.yaml  cscd_l3_uncontained_direction.yaml
configs/event_selection/: cascade_monopod_cascade_dir_big_kernel.yaml  cascade_monopod_starting_cascades_big_kernel.yaml  cascade_monopod_starting_events.yaml  cascade_monopod_starting_events_big_kernel.yaml  cascade_monopod_starting_pid_big_kernel.yaml  dnn_cscd_l3a_starting_events.yaml  dnn_cscd_l3b_starting_cascades.yaml  dnn_cscd_l3b_starting_cascades_big_kernel.yaml  dnn_cscd_l3b_starting_cascades_big_kernel_strict.yaml  dnn_cscd_l3b_starting_events.yaml  dnn_cscd_l3b_starting_events_big_kernel.yaml  dnn_cscd_l3b_starting_events_default_model.yaml  dnn_cscd_l3b_starting_events_default_model_unweighted.yaml  dnn_cscd_l3b_starting_events_unweighted.yaml  event_selection_astroness.yaml  event_selection_cascade_dir.yaml  event_selection_cascade_energy.yaml  event_selection_cascade_pos.yaml  event_selection_cascade_t.yaml  event_selection_entering.yaml  event_selection_nugen_l2_reconstruction.yaml  event_selection_nugen_l2_reconstruction_big.yaml  event_selection_pid.yaml  event_selection_starting_cascades.yaml  event_selection_starting_events.yaml  event_selection_starting_events_big.yaml  event_selection_track_detectorlength.yaml  event_selection_track_dir.yaml  event_selection_track_energy.yaml  event_selection_track_length.yaml  event_selection_track_pos.yaml  event_selection_upgoing_tracks.yaml
configs/hese/: dnn_reco_paper_hese.yaml  dnn_reco_paper_hese_spice_3_2_fine_tuning.yaml
configs/mese/: dnn_reco_paper.yaml  mese.yaml  test_mese.yaml
configs/muon_scattering/: muon_scattering.yaml  muon_scattering_L200_Lb100_La100_E10_r0_40.yaml  muon_scattering_energy.yaml  muon_scattering_tracks.yaml
configs/muon_selection/: muon_selection_classifier.yaml  muon_selection_direction.yaml  muon_selection_energy_zenith.yaml
configs/nersc_gnn/: nersc_gnn.yaml
configs/numu/: numu_11069.yaml  numu_11883.yaml  numu_11883_bigger.yaml  numu_11883_l2_seed.yaml
configs/stopping_muons/: stopping_muons_hoinka_no_filter.yaml  stopping_muons_hoinka_no_filter__direction.yaml  stopping_muons_hoinka_no_filter__energy.yaml  stopping_muons_hoinka_no_filter__stopping_rz.yaml
configs/tutorial/: create_training_data.yaml  getting_started.yaml
dnn_reco/: __about__.py  __init__.py  count_number_of_events.py  create_trafo_model.py  data_handler.py  data_trafo.py  detector.py  export_model.py  misc.py  model.py  notes.txt  setup_manager.py  train_model.py  utils.py  version_control.py
docs/: Makefile  make.bat
test/: test_import.py
tests/: README.txt  test.py  test_trafo_model.py
tests_manual/: README.txt  test.py  test_data_cfg.yaml  test_trafo_model.py
(+215 files in other folders)
